added new sections

--- a/index.html
+++ b/index.html
@@ -306,8 +306,42 @@
                 <p class="text-right-block-inner">
                     Shock happenings in the world of Gucci bags. 
                 </p>
-                <div class="bottom-border-width"></div> 
+                <div class="bottom-border-width-2"></div> 
             </div>
+        </div>
+    </div>
+    <div class="wrapper-numbers-block">
+        <div class="number-block-1">
+            <img src="image/Group.png" alt="" width="20px" height="19px"/>
+            <p class="number-1">99.9%</p>
+            <a href="#" class="number-link">
+                Fashion Reviews
+                <p class="number-link-inner">verified real people</p>
+            </a>
+        </div>
+        <div class="number-block-2">
+            <img src="image/group-2.png" alt="" width="20px" height="19px"/>
+            <p class="number-1">1001</p>
+            <a href="#" class="number-link">
+                Items For Sale
+                <p class="number-link-inner">On the shop</p>
+            </a>
+        </div>
+        <div class="number-block-3">
+            <img src="image/vector-4.png" alt="" width="20px" height="19px"/>
+            <p class="number-1">237</p>
+            <a href="#" class="number-link">
+                Website Reviews
+                <p class="number-link-inner">5 Stars or more</p>
+            </a>
+        </div>
+        <div class="number-block-4">
+            <img src="image/vector-3.png" alt="" width="20px" height="19px"/>
+            <p class="number-4">1/4 <sup class="paragraph-inner">th</sup></p>
+            <a href="#" class="number-link">
+                Of All Brands Shown
+                <p class="number-link-inner">Members see more</p>
+            </a>
         </div>
     </div>
 </div>
